local/yaml/environment.ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
