local/yaml/node-server.deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-node-server
spec:
  type: NodePort
  selector:
    app: node-server
  ports:
    - name: default
      port: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server
  labels:
    app: node-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-server
  template: # POD TEMPLATE SPEC
    metadata:
      labels:
        app: node-server
    spec:
      containers:
      - name: node-server
        image: zulee/node-server
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
